<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- MISC -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="need_google_maps"></string>
    <string name="hold_to_speak">Hold to speak</string>
    <string name="play">Play</string>
    <string name="input_photo">Photo</string>
    <string name="input_video">Video</string>
    <string name="input_location">Location</string>
    <string name="input_voice">Voice</string>
    <string name="input_free_call">Free Call</string>
    <string name="input_video_chat">Video Chat</string>
    <string name="send_location">Send Location</string>
    <string name="media_record_not_avaliable">Media record not avaliable</string>
	<string name="input_doodle">Doodle</string>
	<string name="input_pictext">Pic + Text</string>
	<string name="input_picvoice">Pic + text + Voice </string>
	<string name="crop">Crop</string>
    <string name="msg_audio_pause">Pause</string>
    <string name="msg_audio_resume">Resume</string>
    <string name="msg_audio_restart">Restart</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel" >CANCEL</string>
    <string name="err_file_too_large">文件太大（请勿超过16MB）</string>
    <string name="err_operation_failed">操作失败</string>
    <string name="err_create_thumbnail">无法生成缩略图</string>
</resources>
