<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:src="@color/libmsg_color_bfbfbf"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tablelayout_height"
            android:orientation="horizontal"
            android:background="@color/libmsg_white"
            android:padding="@dimen/multimedia_btn_margin">

        <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

            <LinearLayout
                    android:id="@+id/media_layout_input_voice_item"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageButton
                        android:id="@+id/btn_input_voice"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null"
                        android:background="@drawable/chat_icon_voice"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/msg_composer_media_txt_ind_size"
                        android:textColor="@color/ligmsg_composer_media_txt_color"
                        android:text="@string/input_voice"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/media_layout_input_pic_item"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageButton
                        android:id="@+id/btn_input_pic"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null"
                        android:background="@drawable/chat_icon_photo"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/msg_composer_media_txt_ind_size"
                        android:textColor="@color/ligmsg_composer_media_txt_color"
                        android:text="@string/input_photo"/>
            </LinearLayout>

	        <LinearLayout
		        android:id="@+id/media_layout_input_video_item"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">

		        <ImageButton
			        android:id="@+id/btn_input_video"
			        android:layout_width="64dp"
			        android:layout_height="64dp"
			        android:contentDescription="@null"
			        android:background="@drawable/chat_icon_video"/>

		        <TextView
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:singleLine="true"
			        android:textSize="@dimen/msg_composer_media_txt_ind_size"
			        android:textColor="@color/ligmsg_composer_media_txt_color"
			        android:text="@string/input_video"/>
	        </LinearLayout>

	        <LinearLayout
		        android:id="@+id/media_layout_input_loc_item"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">

		        <ImageButton
			        android:id="@+id/btn_input_loc"
			        android:layout_width="64dp"
			        android:layout_height="64dp"
			        android:contentDescription="@null"
			        android:background="@drawable/chat_icon_location"/>

		        <TextView
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:singleLine="true"
			        android:textSize="@dimen/msg_composer_media_txt_ind_size"
			        android:textColor="@color/ligmsg_composer_media_txt_color"
			        android:text="@string/input_location"/>
	        </LinearLayout>
        </TableRow>

        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="visible">

	        <LinearLayout
		        android:id="@+id/media_layout_doodle_item"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">

		        <ImageButton
			        android:id="@+id/btn_input_doodle"
			        android:layout_width="64dp"
			        android:layout_height="64dp"
			        android:contentDescription="@null"
			        android:background="@drawable/chat_icon_doodle"/>

		        <TextView
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:singleLine="true"
			        android:textSize="@dimen/msg_composer_media_txt_ind_size"
			        android:textColor="@color/ligmsg_composer_media_txt_color"
			        android:text="@string/input_doodle"/>
	        </LinearLayout>
	        <LinearLayout
		        android:id="@+id/media_layout_picvoice_item"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">

		        <ImageButton
			        android:id="@+id/btn_input_picvoice"
			        android:layout_width="64dp"
			        android:layout_height="64dp"
			        android:contentDescription="@null"
			        android:background="@drawable/messages_icon_more_pictures_voice_text"/>

		        <TextView
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:singleLine="true"
			        android:textSize="@dimen/msg_composer_media_txt_ind_size"
			        android:textColor="@color/ligmsg_composer_media_txt_color"
			        android:text="@string/input_picvoice"/>
	        </LinearLayout>

            <LinearLayout
                    android:id="@+id/layout_freecall"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageButton
                        android:id="@+id/btn_free_call"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null"
                        android:background="@drawable/chat_icon_call"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/msg_composer_media_txt_ind_size"
                        android:textColor="@color/ligmsg_composer_media_txt_color"
                        android:text="@string/input_free_call"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layout_videochat"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageButton
                        android:id="@+id/btn_video_chat"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@null"
                        android:background="@drawable/chat_icon_videochat"/>

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/msg_composer_media_txt_ind_size"
                        android:textColor="@color/ligmsg_composer_media_txt_color"
                        android:text="@string/input_video_chat"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>
</LinearLayout>
