<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/sms_voice_balloon"
    android:minHeight="100dp"
    android:minWidth="250dp"
    android:paddingTop="20dp" 
    android:paddingBottom="10dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/play"
            android:scaleType="centerInside"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/send"
            android:scaleType="centerInside"
            android:src="@drawable/send" />

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/cancel"
            android:scaleType="centerInside"
            android:src="@drawable/close" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/play"
            android:textColor="@color/libmsg_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/send"
            android:textColor="@color/libmsg_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/libmsg_white"
            android:textSize="15sp" />
    </TableRow>

</TableLayout>